--- a/frontend/src/styles/LoginPage.css
+++ b/frontend/src/styles/LoginPage.css
@@ -24,3 +24,17 @@
     border: none;
     cursor: pointer;
   }
+  .signup-btn, .login-btn {
+    display: block;
+    width: 100%;
+    padding: 10px;
+    margin-top: 10px;
+    background-color: rgb(255, 255, 255);
+    color: white;
+    border: none;
+    cursor: pointer;
+  }
+  
+  .signup-btn:hover, .login-btn:hover {
+    background-color: rgb(244, 248, 244);
+  }
